<resources>
    <string name="app_name">AvestaRootFileManager</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="share">Share</string>
    <string name="edit">Edit</string>
    <string name="createFolder">Create folder</string>
    <string name="sort">Sort</string>
    <string name="storageAnalysis">Storage analysis</string>
    <string name="settings">Settings</string>
    <string name="ArFileManager">ARFileManager</string>
    <string name="search">Search</string>
    <string name="recentFiles">Recent Files</string>
    <string name="categories">Categories</string>
    <string name="see_whats_taking_up_space_in_your_storage">See what\'s taking up space in your storage</string>
    <string name="images">Images</string>
    <string name="videos">Videos</string>
    <string name="audio">Audio</string>
    <string name="documents">Documents</string>
    <string name="downloads">Downloads</string>
    <string name="installationsFiles">InstallationsFiles</string>
    <string name="back">Back</string>
    <string name="jpg">JPG</string>
    <string name="file_types">File types</string>
    <string name="mp3">MP3</string>
    <string name="mp4">MP4</string>
    <string name="doc">DOC</string>
    <string name="pdf">PDF</string>
    <string name="android">Android</string>
    <string name="date">19 Agu 17:45</string>
    <string name="items">1 items</string>
    <string name="recent_searches">Recent searches</string>
    <string name="clear_search_history">Clear search history</string>
</resources>