<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/edit"
        android:title="@string/edit"
        app:showAsAction="never"/>

    <item
        android:id="@+id/share"
        android:title="@string/share"
        app:showAsAction="never"/>

    <item
        android:id="@+id/createFolder"
        android:title="@string/createFolder"
        app:showAsAction="never"/>

    <item
        android:id="@+id/sort"
        android:title="@string/sort"
        app:showAsAction="never"/>

    <item
        android:id="@+id/storageAnalysis"
        android:title="@string/storageAnalysis"
        app:showAsAction="never"/>

    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        app:showAsAction="never"/>

    <item
        android:id="@+id/search"
        android:title="@string/search"
        android:icon="@drawable/search"
        app:showAsAction="always"/>

</menu>