<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:clickable="true"
    android:id="@+id/relative_items"
    android:focusable="true"
    android:background="?android:attr/selectableItemBackground"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/iconCrd"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        app:cardCornerRadius="15dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_folder" />

    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/nameTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/iconCrd"
        android:text="@string/android"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/dateTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_below="@id/nameTv"
        android:layout_toEndOf="@id/iconCrd"
        android:text="@string/date" />


    <TextView
        android:id="@+id/itemsCountTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginRight="22dp"
        android:layout_alignParentRight="true"
        android:text="@string/items" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@id/iconCrd"
        android:layout_marginLeft="70dp"
        android:id="@+id/view_line"
        android:layout_marginRight="15dp"
        android:background="@color/gray_100" />
</RelativeLayout>
