<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/cvSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="8dp"
            app:cardCornerRadius="32dp"
            app:cardElevation="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <ImageView
                    android:id="@+id/toolbar"
                    android:layout_width="45dp"
                    android:layout_height="40dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerInParent="true"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:paddingLeft="25dp"
                    android:src="@drawable/back" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="8dp"
                    android:layout_toRightOf="@id/toolbar"
                    android:background="@android:color/transparent"
                    android:hint="@string/search"
                    android:maxLines="1"
                    android:textSize="16sp" />
            </RelativeLayout>

        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/fileTypes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/cvSearch"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/file_types" />

        <LinearLayout
            android:id="@+id/linearFilter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/fileTypes"
            android:layout_centerInParent="true"
            android:layout_marginTop="12dp"
            android:gravity="center">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="3dp"
                app:cardCornerRadius="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_filter_type"
                    android:clickable="true"
                    android:focusable="true"
                    android:id="@+id/jpg"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:paddingLeft="20dp"
                    android:paddingTop="8dp"
                    android:paddingRight="20dp"
                    android:paddingBottom="8dp"
                    android:text="@string/jpg"
                    android:textColor="@color/black" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="3dp"
                app:cardCornerRadius="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_filter_type"
                    android:clickable="true"
                    android:id="@+id/mp3"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:paddingLeft="20dp"
                    android:paddingTop="8dp"
                    android:paddingRight="20dp"
                    android:paddingBottom="8dp"
                    android:text="@string/mp3"
                    android:textColor="@color/black" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="3dp"
                app:cardCornerRadius="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_filter_type"
                    android:clickable="true"
                    android:focusable="true"
                    android:id="@+id/mp4"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:paddingLeft="20dp"
                    android:paddingTop="8dp"
                    android:paddingRight="20dp"
                    android:paddingBottom="8dp"
                    android:text="@string/mp4"
                    android:textColor="@color/black" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="3dp"
                app:cardCornerRadius="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_filter_type"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:paddingLeft="20dp"
                    android:paddingTop="8dp"
                    android:id="@+id/doc"
                    android:paddingRight="20dp"
                    android:paddingBottom="8dp"
                    android:text="@string/doc"
                    android:textColor="@color/black" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="3dp"
                app:cardCornerRadius="15dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_filter_type"
                    android:clickable="true"
                    android:id="@+id/pdf"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:paddingLeft="20dp"
                    android:paddingTop="8dp"
                    android:paddingRight="20dp"
                    android:paddingBottom="8dp"
                    android:text="@string/pdf"
                    android:textColor="@color/black" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <TextView
            android:id="@+id/recentSearches"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearFilter"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/recent_searches" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/recentSearches"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="15dp"
            app:cardCornerRadius="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recRecentSearches"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="25dp"
                    android:paddingTop="12dp"
                    android:paddingBottom="8dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="end"
                    android:layout_marginBottom="8dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:textColor="@color/golden"
                    android:text="@string/clear_search_history" />


            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cvSearch"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            app:cardCornerRadius="30dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rec_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="25dp"
                android:visibility="gone" />
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
</layout>

